--- a/Lista Circular doble (1)/Lista Circular doble/Lista Circular doble.csproj
+++ b/Lista Circular doble (1)/Lista Circular doble/Lista Circular doble.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsLista.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,11 +54,20 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Lista.cs" />
+    <Compile Include="ListaMascotas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListaMascotas.Designer.cs">
+      <DependentUpon>ListaMascotas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Nodo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListaMascotas.resx">
+      <DependentUpon>ListaMascotas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
